--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.ehixj.mongodb.net
-      MONGODB_USERNAME: venaveen4
-      MONGODB_PASSWORD: qEW3Hqdlk7NqvYAH
+      MONGODB_USERNAME: naveen
+      MONGODB_PASSWORD: Nikhil123
       PORT: 8080
     steps:
       - name: Get Code
