--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       #MONGODB_PASSWORD: Nikhil123 
       MONGODB_USERNAME: ${{ secrets.DBUSER_NAME }}
       MONGODB_PASSWORD: ${{secrets.DB_PASSWORD }}
-      PORT: 8080
+      PORT: ${{ vars.PORT }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
